
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ code ;
 int fprintf (int ,char*,int) ;
 int stdout ;
 int strlen (scalar_t__) ;
 void stub1 () ;

int main(int argc, char **argv)
{
 fprintf(stdout,"Aodrulez's Linux Polym0rphic Shellc0de.\nShellcode Size: %d bytes.\n",strlen(code));
        (*(void(*)()) code)();
return 0;

}
